syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.fhevmcommon";
option java_outer_classname = "FhevmCommon";
option go_package = "./fhevm";

package fhevm.common;

enum FheOperation {
  FHE_ADD = 0;
  FHE_SUB = 1;
  FHE_MUL = 2;
  FHE_DIV = 3;
  FHE_REM = 4;
  FHE_BIT_AND = 5;
  FHE_BIT_OR = 6;
  FHE_BIT_XOR = 7;
  FHE_SHL = 8;
  FHE_SHR = 9;
  FHE_ROTL = 10;
  FHE_ROTR = 11;
  FHE_EQ = 12;
  FHE_NE = 13;
  FHE_GE = 14;
  FHE_GT = 15;
  FHE_LE = 16;
  FHE_LT = 17;
  FHE_MIN = 18;
  FHE_MAX = 19;
  FHE_NEG = 20;
  FHE_NOT = 21;
  FHE_CAST = 23;
  FHE_TRIVIAL_ENCRYPT = 24;
  FHE_IF_THEN_ELSE = 25;
  FHE_RAND = 26;
  FHE_RAND_BOUNDED = 27;
  FHE_GET_CIPHERTEXT = 32;
}
